
    o	DESCRIPTION 'LinkingTo' specs are now recognized as installation
    	dependencies, and included in package management computations.

    o	Standardized DESCRIPTION 'License' specs are now available for
    	package management computations.

    o	"\uxxxx" and "\Uxxxxxxxx" escapes can now be parsed to a UTF-8
	encoded string even in non-UTF-8 locales (this has been
	implemented on Windows since R 2.7.0).  (Use of such escapes
	requires Unicode wide character support.)

    o	New as.raw() method for "tclObj" objects (wish of PR#13578).

    o	Rd.sty now makes a better job of setting email addresses,
	including using a monospaced font.

    o	On systems using ICU for collation (including Mac OS X), using
 	Sys.setlocale() to change the LC_COLLATE setting is more
 	likely to change the collation provided by ICU.

    o	textConnection() gains an 'encoding' argument to determine how
	input strings with marked encodings will be handled.


Rd HELP FILE CHANGES

    o	An experimental tag \Sexpr has been added to Rd files, to
	evaluate expressions at build, install, or render time.
	Currently install time and render time evaluation are
	supported.

    o	The parse_Rd() parser has been made more tolerant of coding
	errors in Rd files:  now all syntax errors are reported as
	warnings, and an attempt is made to continue parsing.

    o	parse_Rd() now has an argument 'fragment' (default FALSE) to
	accept small fragments of Rd files (so that \Sexpr can output
	Rd code which is then parsed).

    o	parse_Rd() now always converts its input to UTF-8.  The Rd2*
	rendering functions have a new parameter, 'outputEncoding',
	which controls how their output is encoded.

    o	parse_Rd() no longer includes the newline as part of a
        "%"-style comment.

    o	There have been various bug fixes and code reorganization in
	the Rd renderers Rd2HTML, Rd2latex, Rd2txt, and Rd2ex.

	All example files are now created with either ASCII or UTF-8