@@ -4248,9 +4248,68 @@ static int NumericValue(int c)
    valid in the current locale, we should switch to UTF-8 for that
    string.  Needs Unicode wide-char support.
 */
+
 #ifdef SUPPORT_MBCS
-#if defined(Win32) || defined(__STDC_ISO_10646__)
+#if defined(__APPLE_CC__)
+/* This may not be 100% true (see the comment in rlocales.h),
+   but it seems true in normal locales */
+#define __STDC_ISO_10646__
+#endif
+
 #define USE_UTF8_IF_POSSIBLE
+#if defined(Win32) || defined(__STDC_ISO_10646__)
+typedef wchar_t ucs_t;
+#define mbcs_get_next2 mbcs_get_next
+#else
+typedef unsigned int ucs_t;
+#define WC_NOT_UNICODE
+static int mbcs_get_next2(int c, ucs_t *wc)
+{
+    int i, res, clen = 1;
+    char s[9];
+
+    s[0] = c;
+    /* This assumes (probably OK) that all MBCS embed ASCII as single-byte
+       lead bytes, including control chars */
+    if ((unsigned int)c < 0x80)
+    {
+        *wc = (wchar_t)c;
+        return 1;
+    }
+    if (utf8locale)
+    {
+        clen = utf8clen(c);
+        for (i = 1; i < clen; i++)
+        {
+            s[i] = xxgetc();
+            if (s[i] == R_EOF)
+                error(_("EOF whilst reading MBCS char at line %d"), xxlineno);
+        }
+        res = mbtoucs(wc, s, clen);
+        if (res == -1)
+            error(_("invalid multibyte character in parser at line %d"), xxlineno);
+    }
+    else
+    {
+        /* This is not necessarily correct for stateful MBCS */
+        while (clen <= MB_CUR_MAX)
+        {
+            res = mbtoucs(wc, s, clen);
+            if (res >= 0)
+                break;
+            if (res == -1)
+                error(_("invalid multibyte character in parser at line %d"), xxlineno);
+            /* so res == -2 */
+            c = xxgetc();
+            if (c == R_EOF)
+                error(_("EOF whilst reading MBCS char at line %d"), xxlineno);
+            s[clen++] = c;
+        } /* we've tried enough, so must be complete or invalid by now */
+    }
+    for (i = clen - 1; i > 0; i--)
+        xxungetc(s[i]);
+    return clen;
+}
 #endif
 #endif
 
@@ -4258,11 +4317,11 @@ static int NumericValue(int c)
 #define WTEXT_PUSH(c)                                                                                                  \
     do                                                                                                                 \
     {                                                                                                                  \
-        if (wcnt < 1000)                                                                                               \
+        if (wcnt < 10000)                                                                                              \
             wcs[wcnt++] = c;                                                                                           \
     } while (0)
 
-static SEXP mkStringUTF8(const wchar_t *wcs, int cnt)
+static SEXP mkStringUTF8(const ucs_t *wcs, int cnt)
 {
     SEXP t;
     char *s;
@@ -4277,7 +4336,15 @@ static SEXP mkStringUTF8(const wchar_t *wcs, int cnt)
     s = alloca(nb);
     R_CheckStack();
     memset(s, 0, nb); /* safety */
+#ifdef WC_NOT_UNICODE
+    {
+        char *s;
+        for (ss = s; *wcs; wcs++)
+            ss += ucstoutf8(ss, *wcs);
+    }
+#else
     wcstoutf8(s, wcs, nb);
+#endif
     PROTECT(t = allocVector(STRSXP, 1));
     SET_STRING_ELT(t, 0, mkCharCE(s, CE_UTF8));
     UNPROTECT(1);
@@ -4300,6 +4367,7 @@ static SEXP mkStringUTF8(const wchar_t *wcs, int cnt)
     } while (0)
 #define CTEXT_POP() ct--
 
+/* forSymbol is true when parsing backticked symbols */
 static int StringValue(int c, Rboolean forSymbol)
 {
     int quote = c;
@@ -4311,7 +4379,7 @@ static int StringValue(int c, Rboolean forSymbol)
 
 #ifdef USE_UTF8_IF_POSSIBLE
     int wcnt = 0;
-    wchar_t wcs[1001];
+    ucs_t wcs[10001];
     Rboolean use_wcs = FALSE;
 #endif
 
@@ -4396,9 +4464,10 @@ static int StringValue(int c, Rboolean forSymbol)
 #else
                 unsigned int val = 0;
                 int i, ext;
-                size_t res;
-                char buff[MB_CUR_MAX + 1]; /* could be variable, and hence not legal C90 */
                 Rboolean delim = FALSE;
+
+                if (forSymbol)
+                    error(_("\\uxxxx sequences not supported inside backticks (line %d)"), xxlineno);
                 if ((c = xxgetc()) == '{')
                 {
                     delim = TRUE;
@@ -4441,28 +4510,27 @@ static int StringValue(int c, Rboolean forSymbol)
                         CTEXT_PUSH(c);
                 }
                 WTEXT_PUSH(val); /* this assumes wchar_t is Unicode */
-                res = ucstomb(buff, val);
-                if ((int)res <= 0)
-                {
 #ifdef USE_UTF8_IF_POSSIBLE
-                    if (!forSymbol)
-                    {
-                        use_wcs = TRUE;
-                    }
-                    else
-#endif
+                use_wcs = TRUE;
+#else
+                {
+                    size_t res;
+                    char buff[MB_CUR_MAX + 1]; /* could be variable, and hence not legal C90 */
+                    res = ucstomb(buff, val);
+                    if ((int)res <= 0)
                     {
                         if (delim)
                             error(_("invalid \\u{xxxx} sequence (line %d)"), xxlineno);
                         else
                             error(_("invalid \\uxxxx sequence (line %d)"), xxlineno);
                     }
+                    else
+                        for (i = 0; i < res; i++)
+                            STEXT_PUSH(buff[i]);
                 }
-                else
-                    for (i = 0; i < res; i++)
-                        STEXT_PUSH(buff[i]);
-                continue;
 #endif
+                continue;
+#endif /* SUPPORT_MBCS */
             }
             else if (c == 'U')
             {
@@ -4471,9 +4539,9 @@ static int StringValue(int c, Rboolean forSymbol)
 #else
                 unsigned int val = 0;
                 int i, ext;
-                size_t res;
-                char buff[MB_CUR_MAX + 1]; /* could be variable, and hence not legal C90 */
                 Rboolean delim = FALSE;
+                if (forSymbol)
+                    error(_("\\Uxxxxxxxx sequences not supported inside backticks (line %d)"), xxlineno);
                 if ((c = xxgetc()) == '{')
                 {
                     delim = TRUE;
@@ -4515,28 +4583,27 @@ static int StringValue(int c, Rboolean forSymbol)
                     else
                         CTEXT_PUSH(c);
                 }
-                res = ucstomb(buff, val);
-                if ((int)res <= 0)
-                {
+                WTEXT_PUSH(val);
 #ifdef USE_UTF8_IF_POSSIBLE
-                    if (!forSymbol)
-                    {
-                        use_wcs = TRUE;
-                    }
-                    else
-#endif
+                use_wcs = TRUE;
+#else
+                {
+                    size_t res;
+                    char buff[MB_CUR_MAX + 1];
+                    res = ucstomb(buff, val);
+                    if ((int)res <= 0)
                     {
                         if (delim)
                             error(_("invalid \\U{xxxxxxxx} sequence (line %d)"), xxlineno);
                         else
                             error(_("invalid \\Uxxxxxxxx sequence (line %d)"), xxlineno);
                     }
+                    for (i = 0; i < res; i++)
+                        STEXT_PUSH(buff[i]);
                 }
-                for (i = 0; i < res; i++)
-                    STEXT_PUSH(buff[i]);
-                WTEXT_PUSH(val);
-                continue;
 #endif
+                continue;
+#endif /* SUPPORT_MBCS */
             }
             else
             {
@@ -4585,9 +4652,8 @@ static int StringValue(int c, Rboolean forSymbol)
         else if (mbcslocale)
         {
             int i, clen;
-            wchar_t wc = L'\0';
-            /* We can't assume this is valid UTF-8 */
-            clen = /* utf8locale ? utf8clen(c):*/ mbcs_get_next(c, &wc);
+            ucs_t wc;
+            clen = mbcs_get_next2(c, &wc);
             WTEXT_PUSH(wc);
             for (i = 0; i < clen - 1; i++)
             {
@@ -4612,13 +4678,20 @@ static int StringValue(int c, Rboolean forSymbol)
         STEXT_PUSH(c);
 #ifdef USE_UTF8_IF_POSSIBLE
         if ((unsigned int)c < 0x80)
-            WTEXT_PUSH(c); /* assumes wchar_t embeds ASCII */
+            WTEXT_PUSH(c);
         else
         { /* have an 8-bit char in the current encoding */
+#ifdef WC_NOT_UNICODE
+            ucs_t wc;
+            char s[2] = " ";
+            s[0] = c;
+            mbtoucs(&wc, s, 2);
+#else
             wchar_t wc;
             char s[2] = " ";
             s[0] = c;
             mbrtowc(&wc, s, 2, NULL);
+#endif
             WTEXT_PUSH(wc);
         }
 #endif
@@ -4637,11 +4710,11 @@ static int StringValue(int c, Rboolean forSymbol)
 #ifdef USE_UTF8_IF_POSSIBLE
         if (use_wcs)
         {
-            if (wcnt < 1000)
+            if (wcnt < 10000)
                 PROTECT(yylval = mkStringUTF8(wcs, wcnt)); /* include terminator */
             else
                 error(
-                    _("string at line %d containing Unicode escapes not in this locale\nis too long (max 1000 chars)"),
+                    _("string at line %d containing Unicode escapes not in this locale\nis too long (max 10000 chars)"),
                     xxlineno);
         }
         else
@@ -4755,8 +4828,7 @@ static int SymbolValue(int c)
     {
         wchar_t wc;
         int i, clen;
-        /* We can't assume this is valid UTF-8 */
-        clen = /* utf8locale ? utf8clen(c) :*/ mbcs_get_next(c, &wc);
+        clen = mbcs_get_next(c, &wc);
         while (1)
         {
             /* at this point we have seen one char, so push its bytes
